name:
  vector-builder-bench
version:
  0.1.0
synopsis:
  Synopsis
license:
  BSD3
author:
  guaraqe
maintainer:
  guaraqe@openmailbox.org
build-type:
  Simple
cabal-version:
  >=1.10

executable bench
  main-is:
    Main.hs
  build-depends:
    base >=4.7 && <4.10,
    criterion,
    vector,
    vector-builder >= 0.3
  hs-source-dirs:
    app
  ghc-options:
    -O2
    -threaded
  default-language:
    Haskell2010
